fixed medium bug, form validation and myprofile empty whitespace

--- a/react-app/src/components/MyProfilePage/MyProfilePage.css
+++ b/react-app/src/components/MyProfilePage/MyProfilePage.css
@@ -146,3 +146,13 @@
 .myprofile-edit-delete-container {
     padding-bottom: 10px;
 }
+
+.myprofile-no-restaurant-text {
+    padding-top: 10px;
+    color: red;
+}
+
+.myprofile-no-reviews-text {
+    padding-top: 10px;
+    color: red;
+}
